--- a/public/css/style.less
+++ b/public/css/style.less
@@ -113,6 +113,13 @@ body
     //   .centerVertical;
     // }
 
+    h1
+    {
+      color: #557f9b;
+      font-family: 'Open sans';
+      font-weight: 300;
+    }
+
     input
     {
       width: 100%;
@@ -233,12 +240,12 @@ footer
   {
     background: #04627D;
     margin-top: 2px;
-    height: 50%;
+    height: 55%;
     width: 100%;
 
     > form
     {
-      padding: 9% 8%;
+      padding: 8%;
       box-sizing: border-box;
       width: 100%;
 
@@ -249,6 +256,7 @@ footer
         width: 100%;
         box-sizing: border-box;
         font-family: 'Open Sans';
+        font-size: 18px;
         font-weight: 300;
         color: #036884;
         .shadow(2px 2px 10px rgba(68, 68, 68, 0.43) inset);
@@ -312,6 +320,33 @@ footer
           .shadow(none);
           .brillo();
         }
+      }
+      .register
+      {
+        color: #056783;
+        text-decoration: none;
+        font-size: 12px;
+        margin-top: 5px;
+        float: right;
+        position: absolute;
+        bottom: -44px;
+        right: 0;
+
+        &:hover
+        {
+          color: #fff;
+        }
+      }
+      #message
+      {
+        color: #F80404;
+        text-decoration: none;
+        font-size: 16px;
+        margin-top: 5px;
+        float: left;
+        position: absolute;
+        bottom: -44px;
+        left: 0;
       }
     }
   }
