--- a/views/login.jade
+++ b/views/login.jade
@@ -4,10 +4,13 @@ block content
     .top
       #logo_darwined
     .bottom
-      form(name="login", action="http://localhost:5000/login", method="get")
-        input(type="text", placeholder="USUARIO", required)
-        input(type="password", placeholder="CONTRASEÑA", required)
+      form#loginform(name="login")
+        input#username(type="text", placeholder="USUARIO", required)
+        input#password(type="password", placeholder="CONTRASEÑA", required)
         input#entrar(type="submit", value="ENTRAR")
+        a.register(href="http://localhost:4000/register") REGISTRATE
+        #message
+        script(src='js/getToken.js', type='text/javascript')
   footer
     .left
     .right
