--- a/views/login.jade
+++ b/views/login.jade
@@ -8,7 +8,7 @@ block content
         input#username(type="text", placeholder="USUARIO", required)
         input#password(type="password", placeholder="CONTRASEÑA", required)
         input#entrar(type="submit", value="ENTRAR")
-        a.register(href="http://localhost:4000/register") REGISTRATE
+        a.register(href="#{url_daccount}/register") REGISTRATE
         #message
         script(src='js/getToken.js', type='text/javascript')
   footer
