--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title #{title}
     link(rel='stylesheet', href='../css/style.css')
-    script(src="http://code.jquery.com/jquery-1.7.min.js", type="text/javascript")
+    script(src="/js/jquery-1.11.3.min.js", type="text/javascript")
     
   body
     header
