--- a/public/css/style.less
+++ b/public/css/style.less
@@ -128,7 +128,7 @@ body
       font-size: 18px;
       padding: 4px;
       font-family: 'Open sans';
-      text-transform: capitalize;
+      // text-transform: capitalize;
       .centerVertical;
       .box-sizing;
     }
