--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,9 @@ html
   head
     title #{title}
     link(rel='stylesheet', href='../css/style.css')
+    link(rel='stylesheet', href='../css/responsive.css')
     script(src="/js/jquery-1.11.3.min.js", type="text/javascript")
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     
   body
     header
