--- a/public/css/responsive.less
+++ b/public/css/responsive.less
@@ -1,5 +1,29 @@
-/* Desktops and laptops ----------- */
+/* Mobile ----------- */
 @media only screen
 and (max-width : 375px) {
-  
+  .login
+  {
+    width: 80%;
+  }
+}
+
+/* Desktop and laptops */
+@media only screen
+and (max-width : 1350) {
+  .login
+  {
+    width: 275px;
+  }
+  .login>.top>#logo_darwined
+  {
+    background-size: 93%;
+  }
+  .login>.bottom>form
+  {
+    padding: 5% 5%;
+  }
+  .login>.bottom>form input
+  {
+    font-size: 13px;
+  }
 }
