initial responsive stuff

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,1 +1,1 @@
-@media only screen and (max-width:375px){.login{width:80%}}@media only screen and (max-width:1350){.login{width:275px}.login>.top>#logo_darwined{background-size:93%}.login>.bottom>form{padding:5% 5%}.login>.bottom>form input{font-size:13px}}
+@media only screen and (max-width:375px){.login{width:80%}}@media only screen and (max-width:1350px){.login{width:275px}.login>.top>#logo_darwined{background-size:93%}.login>.bottom>form{padding:5% 5%}.login>.bottom>form input{font-size:13px}}
