--- a/public/css/responsive.less
+++ b/public/css/responsive.less
@@ -9,7 +9,7 @@ and (max-width : 375px) {
 
 /* Desktop and laptops */
 @media only screen
-and (max-width : 1350) {
+and (max-width : 1350px) {
   .login
   {
     width: 275px;
