responsive adjust for register form

--- a/views/register.jade
+++ b/views/register.jade
@@ -1,6 +1,6 @@
 extend layout
 block content
-  form(name="register", class="form register", action="#{url_faccount}/register", method="post")
+  form(name="register", id="register", class="form register", action="#{url_faccount}/register", method="post")
       li
         h1 Obten tu cuenta foris
       li(style="height: 60px; font-size: 11px;")
