responsive adjust for register form

--- a/public/css/responsive.less
+++ b/public/css/responsive.less
@@ -16,9 +16,18 @@ and (max-width : 375px) {
   }
   #register
   {
+    width: 90%;
     position: relative;
     margin-left: 5%;
-    .translate(none,none);
+    .translate(0,0);
+
+    li
+    {
+      input
+      {
+        border: 1px solid rgb(166, 166, 166);
+      }
+    }
   }
 }
 
