responsive adjust for register form

--- a/views/register.jade
+++ b/views/register.jade
@@ -21,7 +21,7 @@ block content
         select(name="cliente", id="cliente" required)
           for cliente in data.clientes
             option(value=cliente.id)= cliente.nombre
-      input(type="submit", value="registrarse", id="registrar", class="submit")
+      input(type="submit", value="Enviar solicitud", id="registrar", class="submit")
       
       
           
