--- a/public/css/responsive.less
+++ b/public/css/responsive.less
@@ -19,6 +19,8 @@ and (max-width : 375px) {
     width: 90%;
     position: relative;
     margin-left: 5%;
+    top: 0;
+    left: 0;
     .translate(0,0);
 
     li
