--- a/views/register.jade
+++ b/views/register.jade
@@ -3,8 +3,8 @@ block content
   form(name="register", id="register", class="form register", action="#{url_faccount}/register", method="post")
       li
         h1 Obten tu cuenta foris
-      li(style="height: 60px; font-size: 11px;")
-        p Con tu cuenta foris podrás acceder sólo a las aplicaciones que tienes contratado. Para mayor información visita <a href="#"> nuestros planes </a>  
+      li(style="height: 60px; font-size: 12px;")
+        p Con tu cuenta foris podrás acceder sólo a las aplicaciones que tienes contratadas. Para mayor información visita <a href="#"> nuestros planes </a>  
       li
         input(type="text", name="username", id="username", placeholder="nombre de usuario", required)
       li
